--- a/.gitignore
+++ b/.gitignore
@@ -28,3 +28,13 @@ coverage
 storage/widgets/
 storage/images/
 
+# Deployment
+.vercel
+.railway
+
+# Environment variables
+.env
+.env.local
+.env.production
+.env.*.local
+
